# -seo-optimization-product-cards

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pgjob.Dockerfile  product_cards.db.dvc  pyproject.toml
.dvc/: config
api/: main.py
api/celery_config/: celery_config.py  celery_utils.py
api/celery_tasks/: tasks.py
api/nginx_config/nginx/: nginx.conf
api/nginx_config/nginx/conf.d/: seo.conf
api/routes/: seo_classification.py
api/static/: training_model.css
api/templates/: main_page.html  training_model.html
classification/: db_check.py  db_create_table.py  db_fill.py  for_testing.py  inference.py  train.py
classification/utils/: dataset.py  infer.py  model.py  plots.py  seed.py  trainer.py
data/: .gitignore  archive_db_data.py  archive_grafana.py  checkpoint_model.dvc  data.dvc  db_data.dvc  db_data.zip.dvc  grafana.zip.dvc  labelencoder.pkl.dvc
inference/: prediction.py  train.py
k8s/: api_deployment.yaml  api_service.yaml  celery_deployment.yaml  celery_service.yaml  flower_deployment.yaml  flower_service.yaml  ingress.yaml  k8s_apply.ps1  k8s_delete.ps1  namespace.yaml  nginx_configmap.yaml  nginx_deployment.yaml  nginx_services.yaml  pg_deployment.yaml  pg_job.yaml  pg_service.yaml  rmq_deployment.yaml  rmq_service.yaml  secrets.yaml
k8s/pgjob/: db_check.py  db_conn.py  db_create_table.py  db_fill.py
monitoring/: prometheus.yml
