[tool.poetry]
name = "seo-optimization-product-cards"
version = "0.1.0"
description = "Seo optimization product cards"
authors = ["Sophie Buzaeva <sofibuz@mail.ru>"]
readme = "README.md"
repository = "https://github.com/sophieebuz/seo-optimization-product-cards"
keywords = ["wildberries", "seo", "cv", "nlp", "deep learning"]
packages = [{include = "seo_optimization_product_cards"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
pydrive = "^1.3.1"

[tool.poetry.group.dev.dependencies]
dependencies = "^7.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
