[tool.poetry]
name = "seo-optimization-product-cards"
version = "0.1.0"
description = "Seo optimization product cards"
authors = ["Sophie Buzaeva <sofibuz@mail.ru>"]
readme = "README.md"
repository = "https://github.com/sophieebuz/seo-optimization-product-cards"
keywords = ["wildberries", "seo", "cv", "nlp", "deep learning"]
packages = [{include = "seo_optimization_product_cards"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torchvision = "^0.17.1"
accelerate = "^0.27.2"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
flower = "^2.0.1"
eventlet = "^0.35.2"
sqlalchemy = "^2.0.28"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gdrive"], version = "^3.48.2"}
pre-commit = "^3.6.2"
isort = "^5.13.2"


[tool.poetry.group.additional.dependencies]
pydrive = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
